--- a/spam_detector.ipynb
+++ b/spam_detector.ipynb
@@ -1185,7 +1185,7 @@
    "metadata": {},
    "source": [
     "Looking at the logistic regression after doing PCA, it is clear that PCA was not helpful in this instance, and did not improve the performance of the model, and instead resulted\n",
-    "in the inevitable data loss that happens when using PCA. "
+    "in the inevitable information loss that happens when using PCA. "
    ]
   }
  ],
